# subhub

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_EN.md  config.toml  pyproject.toml  qwen-3.5-flash.md
docs/: execution-system-developer-guide.md  service.subhub-manual.md
docs/plans/: 2026-04-03-subhub-design.md
docs/superpowers/plans/: 2026-04-18-mobile-friendly-agent-output.md  2026-04-26-subhub-embedded-matrix-bot.md
docs/superpowers/specs/: 2026-04-18-mobile-friendly-agent-output-design.md  2026-04-26-subhub-embedded-matrix-bot-design.md
link/: README.md  config-template.yaml
link/agents/: subhub.yaml
link/agents/skills/manage-subscriptions/: SKILL.md
link/agents/skills/manage-subscriptions/references/: domain-rules.md
prompts/: system_prompt.md
skills/manage-subscriptions/: SKILL.md
skills/manage-subscriptions/references/: domain-rules.md
src/subhub/: __init__.py  api.py  attachments.py  bot.py  chat.py  config.py  display.py  llm_engine.py  main.py  matrix_client.py  media_store.py  r2_protocol.py  reminder.py  reminder_task.py  service.py  skills.py  store.py  tools.py  webhook.py
tests/: test_api.py  test_attachments.py  test_bot.py  test_config.py  test_display.py  test_llm_engine.py  test_main.py  test_matrix_client.py  test_media_store.py  test_r2_protocol.py  test_reminder.py  test_reminder_task.py  test_skill_content.py  test_store.py  test_tools.py  test_webhook.py
