[project]
name = "subhub"
version = "0.1.0"
description = "个人订阅管理系统 - 面向 Link 的 API 服务"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "aioboto3>=13.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "matrix-nio>=0.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
subhub = "subhub.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
